<resources>
    <string name="app_name">GnomikX</string>
    <string name="preloader_quote">Never accept limitations.</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_sign">Sign In/Sign Up</string>
    <string name="nav_bmi">BMI</string>
    <string name="nav_genetic_tests">Genetic Tests</string>
    <string name="nav_register_patients">Register Patients</string>
    <string name="nav_queries">Queries</string>
    <string name="nav_submit_blog">Submit Blog</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_title">Menu</string>
    <string name="bmi_height_hint">Height</string>
    <string name="bmi_m_height_hint">Height (in m)</string>
    <string name="bmi_cm_height_hint">Height (in cm)</string>
    <string name="bmi_in_height_hint">Height (in inch)</string>
    <string name="bmi_f_height_hint">Height (in feet)</string>
    <string name="bmi_weight_hint">Weight (in kg)</string>
    <string name="bmi_button_text">Calculate BMI</string>
    <string name="height_loo_low_error">Height cannot be that low, please enter a valid height</string>
    <string name="weight_too_low_error">Weight cannot be that low, please enter a valid weight</string>
    <string name="your_bmi">Your BMI is:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gnomokx_logo_content_description">GnomokX Logo</string>
    <string name="no_height_error">Please enter your height</string>
    <string name="no_weight_error">Please enter your weight</string>
    <string name="image_of_blog_content_description">image of blog</string>
    <string name="dummy_trail_text">He has been diagnosed with pneuncorultramicroscopiscilicovolcanoconiosis</string>
    <string name="my_reports">My Reports</string>
    <string name="my_queries">My Queries</string>
    <string name="favorite_blogs">Favorite Blogs</string>
    <string name="my_blogs">My Blogs</string>
    <string name="blog_heading">Heading of Blog</string>
    <string name="blog_body">Body of Blog</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit_text">Submit</string>
    <string name="no_heading_entered">Please add a heading for the blog</string>
    <string name="no_body_entered">Please enter the body of the blog</string>
    <string name="register_number">Patient Number</string>
    <string name="register_edittext_number">Number</string>
    <string name="register_name">Patient Name (Optional)</string>
    <string name="register_edittext_name">Name</string>
    <string name="register_button_text">Submit</string>
    <string name="query_title">Title of the query</string>
    <string name="query_edittext_title">Mention the title here</string>
    <string name="query_body">Description of your query</string>
    <string name="query_edittext_body">Give the description of your query here</string>
    <string name="query_button_text">Submit your query</string>
    <string name="add_tags_hint">Add up to 3 tags here</string>
    <string name="add_tags_text">Add Tags</string>
    <string name="diabetes">Diabetes</string>
    <string name="obesity">Obesity</string>
    <string name="general_health">General Health</string>
    <string name="no_tags_selected_error">Select at least one tag</string>
    <string name="genetic_test_image_content_description">Genetic Test Image</string>
    <string name="genetic_test_diabetes_register_button_text">Register for diabetes test</string>
    <string name="genetic_test_hypertension_register_button_text">Register for hypertension test</string>
    <string name="genetic_test_obesity_register_button_text">Register for obesity test</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="gnomikx_id_text">GnomikX ID</string>
    <string name="password_text">Password</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_name_edit">Enter your name here</string>
    <string name="sign_up_email">Email ID</string>
    <string name="sign_up_email_edit">Enter your email ID here</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_password_edit">Enter your password here</string>
    <string name="sign_up_phone_no">Phone no.</string>
    <string name="sign_up_phone_no_edit">Enter your phone number here</string>
    <string name="no_query_title_entered">Please enter a title of your query</string>
    <string name="no_query_body_entered">Please enter the body of your query</string>
    <string name="enter_email_id_hint">Enter GnomikX email id</string>
    <string name="no_email_id_entered">Please enter your email id</string>
    <string name="no_password_entered">Please enter your password</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="unknown_error">An unknown error occurred. Please try again</string>
    <string name="no_register_patient_number">Please enter the patient registration number</string>
    <string name="patient_text">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="register_as_text">Register as:</string>
    <string name="no_phone_number_entered">Please enter your phone number</string>
    <string name="patient_accessed_register_patients_page_warning">This space is only for doctors</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="favorite_text">Favorite</string>
    <string name="nothing_to_display_text">Nothing to display</string>
    <string name="filters">Filters</string>
    <string name="upload_report">Upload Report</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="sign_in_message_dialog_box">You need to be signed in with a GnomikX account in order to access this feature.
        Would you like to sign in, or create your GnomikX account if you don\'t have one yet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signed_in_text">Signed In</string>
    <string name="sign_out_button_text">Sign out</string>
    <string name="email_verification_required">Email Verification is required</string>
    <string name="email_verification_message">We have sent an email with a verification link to your email address. It may take some time to arrive, and may also be in your spam folder.
        Please note that you will have to verify your email to access some features of the app.</string>
    <string name="check_email_now">Check email now</string>
    <string name="verify_later">Verify later</string>
    <string name="R.string.no_email_application_found">No email application found, please try to verify email later</string>
    <string name="gnomikx_user">GnomikX User</string>
    <string name="regn_number_too_long">Please enter a registration number less than 6 characters long</string>
    <string name="patient_role">Patient</string>
    <string name="doctor_role">Doctor</string>
    <string name="sign_in_with_gnomikx_account">Sign in with a GnomikX account</string>
    <string name="gnomikx_logo_content_description">GnomikX Logo</string>
    <string name="gnomikx_email_id">gnomikxuser@email.com</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="units">Height units</string>
    <string name="patient_name">Patient Name</string>
    <string name="ask_your_query">Ask your Query</string>
    <string name="title_too_long_error">The title you have entered is too long</string>
    <string name="description_too_long_error">The decription that you have given is too long</string>
    <string name="remove_image">Remove image</string>
    <string name="blog_submitted_message">Blog submitted</string>
    <string name="ellipsis">…</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_other">Others</string>
    <string name="no_date_of_birth_selected">Please enter your date of birth</string>
    <string name="no_gender_selected">Please select your gender</string>
    <string name="test_date_hint">Select date for the test</string>
    <string name="test_date_label">Date of the test</string>
    <string name="test_time_hint">Select time for the test</string>
    <string name="test_time_label">Time of the test</string>
    <string name="date_time_dialog_title">Select date and time for the test</string>
    <string name="cancel">Cancel</string>
    <string name="no_date_of_test_selected_error">Please select a date for the test</string>
    <string name="no_time_of_test_selected_error">Please select a time for the test</string>
    <string name="registered_for_diabetes">You have registered for a Diabetes test</string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="registered_for_obesity">You have registered for an Obesity test</string>
    <string name="registered_for_hypertension">You have registered for a Hypertension test</string>
    <string name="loading_text">loading, please wait</string>
    <string name="email_verification_required_for_action">Email verification is required for this action</string>
    <string name="send_verification_email">Resend verification email</string>
    <string name="email_sending_failure_text">Email could not be sent, try again later</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="choose_email_client">Open email using</string>
    <string name="admin">Admin</string>
    <string name="all_users">All Users</string>
    <string name="view_all_queries">View all Queries</string>
    <string name="blogs_awaiting_approval">Blogs awaiting approval</string>
    <string name="call_user">Call User</string>
    <string name="send_email_to_user">Send email to user</string>
    <string-array name="height_unit_choices">
        <item>Inch (in)</item>
        <item>Feet (ft)</item>
        <item>Centimeter (cm)</item>
        <item>Metre (m)</item>
    </string-array>
    <string name="display_username">Name: %1$s</string>
    <string name="display_useremail">Email ID: %1$s</string>
    <string name="display_userphone">Phone number: %1$s</string>
    <string name="display_usergender">Gender: %1$s</string>
    <string name="display_userDOB">Date of birth: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="send_email_chooser_text">Send Email Using:</string>
    <string name="get_pdf_chooser_title">Get report using:</string>
    <string name="email_salutation">Dear %1$s</string>
    <string name="file_could_not_be_opened">FIle could not be opened</string>
    <string name="open_report_chooser_title">Open report using:</string>
    <string name="approve">Approve</string>
    <string name="approved">Approved</string>
    <string name="blog_approved">Blog has been approved</string>
    <string name="query_response_hint">Enter the response to the query here</string>
    <string name="query_response_label_text">Your response</string>
    <string name="post_response">Post response</string>
    <string name="no_response_entered_error">Enter some response</string>
</resources>