<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/ask_your_query"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/query_title_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                app:met_underlineColor="@color/colorAccent"
                android:hint="@string/query_edittext_title"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelText="@string/query_title"
                android:inputType="text|textMultiLine|textCapSentences"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_maxCharacters="65"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/query_body_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                app:met_underlineColor="@color/colorAccent"
                android:hint="@string/query_edittext_body"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAnimating="true"
                android:inputType="text|textMultiLine|textCapSentences"
                app:met_floatingLabelText="@string/query_body"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_maxCharacters="500"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/submit_query_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_marginBottom="@dimen/buttons_bottom_margin"
                android:text="@string/query_button_text"
                style="@style/ButtonStyle"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/ask_query_progress_bar"/>

</android.support.constraint.ConstraintLayout>